changed CI to fix test problem